--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,87 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Flow VR</title>
-        <!-- IMPORTS -->
-        <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  <head>
+    <title>Atomic Architect VR</title>
+    <!-- IMPORTS -->
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
+    <script src="js/sound.js"></script>
 
-        <script>
-            AFRAME.registerComponent('start_experience', {
-                init: function(){
-                    // when called, can assume A-Frame scene is ready
-                    console.log('scene loaded');
-                    document.querySelector('#user-gesture-button').style.display='block';
-                }
-            });
-        </script>
-    </head>
-    <body>
-        <a-scene>
-        </a-scene>
-    </body>
+    <script>
+      AFRAME.registerComponent("start_experience", {
+        init: function () {
+          // when called, can assume A-Frame scene is ready
+          console.log("scene loaded");
+          document.querySelector("#user-gesture-button").style.display =
+            "block";
+        },
+      });
+
+      // called when user clicks initial button
+      const startExperience = function () {
+        // hide button
+        document.querySelector("#user-gesture-overlay").style.display = "none";
+      };
+    </script>
+  </head>
+  <body>
+    <a-scene start_experience>
+      <!--ASSETS-->
+      <a-assets>
+        <audio
+          id="button_click"
+          src="assets/sounds/button_click.mp3"
+          preload="auto"
+          crossorigin="anonymous"
+        ></audio>
+      </a-assets>
+
+      <!-- BUTTON -->
+      <a-entity id="generate_electron" position="0 0 -2">
+        <a-entity
+          id="button_pedestal"
+          position="0 0.55 0"
+          geometry="primitive:box; width:0.35; depth: 0.35; height:1.1;"
+          material="color:#004400"
+        ></a-entity>
+        <a-entity
+          id="button"
+          class="interactive"
+          position="0 1.15 0"
+          animation__click="property:position.y; to:1.15; from:1.08; startEvents:click; dur:300;"
+          sound="src:#button_click;  "
+          geometry="primitive:cylinder; height:0.2; radius:0.15;"
+          material="color:#ff0000"
+        ></a-entity>
+      </a-entity>
+
+      <!-- CAMERA & CURSOR -->
+      <a-entity
+        id="pov_cam"
+        position="0 1.8 0"
+        camera
+        wasd-controls
+        look-controls
+      >
+        <a-entity
+          id="cursor"
+          cursor="rayOrigin:mouse;"
+          raycaster="far:20; interval:200; objects:.interactive;"
+        >
+        </a-entity>
+      </a-entity>
+
+      <!-- ENVIRONMENT -->
+      <a-entity id="environment" environment="preset:default"> </a-entity>
+
+      <!-- USER GESTURE HTML-->
+      <div id="user-gesture-overlay">
+        <div class="center">
+          <button id="user-gesture-button" onClick="startExperience();">
+            Enter Experience
+          </button>
+        </div>
+      </div>
+    </a-scene>
+  </body>
 </html>
