--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- IMPORTS -->
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
-    <script src="js/sound.js"></script>
+    <script src="js/button.js"></script>
 
     <script>
       AFRAME.registerComponent("start_experience", {
