--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
     <script src="js/button.js"></script>
-    <script src="js/electron.js"></script>
 
     <script>
       AFRAME.registerComponent("start_experience", {
@@ -73,7 +72,7 @@
       </a-entity>
 
       <!-- ENVIRONMENT -->
-      <a-entity id="environment" environment="preset:default"> </a-entity>
+      <a-entity id="environment" environment="preset:starry"> </a-entity>
 
       <!-- USER GESTURE HTML-->
       <div id="user-gesture-overlay">
