--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
     <script src="js/button.js"></script>
     <script src="js/electron.js"></script>
+    <script src="js/atom.js"></script>
 
     <script>
       AFRAME.registerComponent("start_experience", {
@@ -56,6 +57,9 @@
         ></a-entity>
       </a-entity>
 
+      <!-- ATOM -->
+      <a-entity id="atom" , class="interactive" atom></a-entity>
+
       <!-- CAMERA & CURSOR -->
       <a-entity
         id="pov_cam"
@@ -73,7 +77,7 @@
       </a-entity>
 
       <!-- ENVIRONMENT -->
-      <a-entity id="environment" environment="preset:starry"> </a-entity>
+      <a-entity id="environment" environment="preset:default"> </a-entity>
 
       <!-- USER GESTURE HTML-->
       <div id="user-gesture-overlay">
