init electron attachment

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       </a-entity>
 
       <!-- ATOM -->
-      <a-entity id="atom" , class="interactive" atom></a-entity>
+      <a-entity id="atom" class="interactive" atom></a-entity>
 
       <!-- CAMERA & CURSOR -->
       <a-entity
