--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <!-- IMPORTS -->
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
-    <script src="js/electron.js"></script>
+    <script src="js/particle.js"></script>
     <script src="js/atom.js"></script>
     <script src="js/atom_vortex.js"></script>
-    <script src="js/element_info.js"></script>
+    <script src="js/element_panel.js"></script>
     <script>
       AFRAME.registerComponent("start_experience", {
         init: function () {
@@ -42,12 +42,8 @@
 
       <!-- ATOM VORTEX -->
       <a-entity id="unstable-nucleus" class="interactive" atom-vortex
-        ><a-entity id="atom" class="interactive" atom></a-entity
-        ><a-entity
-          id="element-panel"
-          class="'interactive"
-          element-info
-        ></a-entity
+        ><a-entity id="main-atom" class="interactive" atom></a-entity
+        ><a-entity id="panel" element-panel></a-entity
       ></a-entity>
 
       <!-- ATOM -->
