--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Atomic Architect VR</title>
+
     <!-- IMPORTS -->
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
@@ -10,32 +11,12 @@
     <script src="js/atom_vortex.js"></script>
     <script src="js/element_panel.js"></script>
     <script src="js/vr_logic.js"></script>
+    <script src="js/start_experience.js"></script>
+    <script src="js/element_info.js"></script>
     <link rel="stylesheet" href="css/user-gesture.css" />
-    <script>
-      AFRAME.registerComponent("start_experience", {
-        init: function () {
-          // when called, can assume A-Frame scene is ready
-          console.log("scene loaded");
-          document.querySelector("#user-gesture-button").style.display =
-            "block";
-        },
-      });
-
-      // called when user clicks initial button
-      const startExperience = function () {
-        // hide button
-        document.querySelector("#user-gesture-overlay").style.display = "none";
-
-        //play ambient sound
-        const ambientSounds = document.querySelectorAll(".background-sound");
-        ambientSounds.forEach(function (soundEntity) {
-          soundEntity.components["sound"].playSound();
-        });
-      };
-    </script>
   </head>
   <body>
-    <a-scene start_experience vr-logic>
+    <a-scene start-experience vr-logic>
       <!--ASSETS-->
       <a-assets>
         <audio
@@ -59,8 +40,13 @@
       </a-assets>
 
       <!-- ATOM VORTEX -->
-      <a-entity id="unstable-nucleus" class="interactive" atom-vortex
-        ><a-entity id="main-atom" class="interactive" atom></a-entity
+      <a-entity id="atom-vortex" class="interactive" atom-vortex
+        ><a-entity
+          id="main-atom"
+          class="interactive"
+          position="0 1.6 0"
+          atom
+        ></a-entity
         ><a-entity id="panel" element-panel></a-entity
       ></a-entity>
 
